readme and installation code

--- a/example/index.html
+++ b/example/index.html
@@ -66,14 +66,15 @@
         }
 
         pre {
-            width: 675px;
+            width: 580px;
             margin: 0 auto;
             padding: 15px 0;
             background: rgba(255, 255, 255, 0.5);
             color: black;
+            font-size: 12px;
         }
 
-        @media (max-width: 767px) {
+        @media (max-width: 580px) {
             pre {
                 display: none;
             }
@@ -108,7 +109,7 @@
     <pre>
     <span style="color:#a65700; ">&lt;</span><span style="color:#800000; font-weight:bold; ">script</span><span style="color:#274796; "> </span><span style="color:#074726; ">src</span><span style="color:#808030; ">=</span><span style="color:#0000e6; ">"https://cdn.kon.ovh/app/backVideo/backVideo.min.js"</span><span style="color:#a65700; ">></span><span style="color:#a65700; ">&lt;/</span><span style="color:#800000; font-weight:bold; ">script</span><span style="color:#a65700; ">></span>
     <span style="color:#a65700; ">&lt;</span><span style="color:#800000; font-weight:bold;">script</span><span style="color:#a65700; ">></span>
-    createBackVideo<span style="color:#808030; ">(</span><span style="color:#800000; ">"</span><span style="color:#0000e6; ">video.mp4</span><span style="color:#800000; ">"</span><span style="color:#808030; ">,</span> <span style="color:#800000; ">"</span><span style="color:#0000e6; ">image.jpg</span><span style="color:#800000; ">"</span><span style="color:#808030; ">,</span> <span style="color:#008c00; ">1920</span><span style="color:#808030; ">,</span> <span style="color:#008c00; ">1080</span><span style="color:#808030; ">,</span> onLoadImage<span style="color:#808030; ">,</span> onLoadVideo<span style="color:#808030; ">)</span><span style="color:#800080; ">;</span>
+        createBackVideo<span style='color:#808030; '>(</span><span style='color:#800000; '>'</span><span style='color:#0000e6; '>video.mp4</span><span style='color:#800000; '>'</span><span style='color:#808030; '>,</span> <span style='color:#800000; '>'</span><span style='color:#0000e6; '>image.jpg</span><span style='color:#800000; '>'</span><span style='color:#808030; '>,</span> <span style='color:#008c00; '>1920</span><span style='color:#808030; '>,</span> <span style='color:#008c00; '>1080</span><span style='color:#808030; '>)</span><span style='color:#800080; '>;</span>
     <span style="color:#a65700; ">&lt;/</span><span style="color:#800000; font-weight:bold; ">script</span><span style="color:#a65700; ">></span></pre>
 
     <footer>
