--- a/example/index.html
+++ b/example/index.html
@@ -103,7 +103,7 @@
 
     <header>
         <h1>backVideo</h1>
-        <p>example webside</p>
+        <p>sample webside</p>
     </header>
 
     <pre>
