removed unneeded attributes

--- a/example/index.html
+++ b/example/index.html
@@ -116,7 +116,7 @@
         <span>©&nbsp;Copyright <a target="_blank" href="https://frydlewicz.pl">Kamil&nbsp;Frydlewicz</a> 2020</span>
     </footer>
 
-    <script src="https://cdn.kon.ovh/app/backVideo/backVideo.min.js"></script>
+    <script src="../backVideo.min.js"></script>
 
     <script>
         (function () {
